flux/apps/fluence/crd-operator/app/base/securitypolicy.yml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: crd-operator-api-jwt
  namespace: fluence
spec:
  jwt:
    optional: false
    providers:
      - name: authentik
        issuer: https://authentik.cloudless.dev/application/o/vodopad-${NETWORK}/
        remoteJWKS:
          uri: https://authentik.cloudless.dev/application/o/vodopad-${NETWORK}/jwks/
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: crd-operator-api
